--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/jaejang02/My-Website",
+  "homepage": "https://jaejang02.github.io/My-Website/",
   "name": "my-react-app",
   "version": "0.1.0",
   "private": true,
